--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <!-- <script src="bower_components/jquery/dist/jquery.min.js"></script> -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/moment/min/moment.min.js"></script>
+    <!-- <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
+    <!-- <script src="bower_components/moment/min/moment.min.js"></script> -->
     <script type="text/javascript" src="build/js/app.js"></script>
     <meta charset="utf-8">
     <title>Journal JS</title>
@@ -32,11 +32,15 @@
         <br><br>
         <label for="body">Enter your Journal Entry details: </label><br>
         <textarea class="form-control" id="body" rows="5"></textarea><br>
-        <button type="submit" class="btn">Submit</button>
+        <button type="submit" class="btn">Get Word Count</button>
+        <button type="submit" name="btn" id="vowel">Get Vowel and Consonent Count</button>
       </form>
     </div>
     <div class="container" id="result">
       <p>The number of words in the body you entered is: </p>
+    </div>
+    <div class="container" id="vowelResult">
+      <p>The number of vowels in the body you entered is: </p>
     </div>
   </body>
 </html>
